# raytracer-with-ai

./: .gitignore  CMakeLists.txt  readme.md
assets/scripts/: ai_denoise.py  ai_flux_2_32b_param.py  ai_hf_api.py  host.py  tint_red.py
include/: config.h  engine.h
include/framework/: base.h  core.h  geometry.h  imaging.h  lights.h  materials.h  sampling.h
include/managers/: frame_stats.h  input_controller.h
include/render/: denoiser.h  instant_radiosity.h  light_tracer.h  photon_gatherer.h  photon_map.h  photon_shooter.h  renderer.h
include/sampler/: halton_sampler.h  independent_sampler.h  pixel_sampler.h  sampling.h  sobol_sampler.h  stratified_sampler.h
include/scene/: scene.h  scene_editor.h  scene_host.h  scene_loader.h
include/ui/: ai_panel.h  image_gallery.h  main_menu_bar.h  ui_component.h  ui_context.h  ui_denoise.h  ui_panel.h  ui_settings.h
include/utils/: assets_loader.h  effect_pipeline.h  effect_runner.h  frame_stats.h  gem_loader.h  helper.h  input_controller.h  logger.h  paths.h  python_env.h
src/: core.cpp  engine.cpp  main.cpp  sampling.cpp
src/framework/: core.cpp  geometry.cpp  imaging.cpp  lights.cpp  materials.cpp
src/managers/: frame_stats.cpp  input_controller.cpp
src/render/: denoiser.cpp  instant_radiosity.cpp  light_tracer.cpp  photon_gatherer.cpp  photon_map.cpp  photon_shooter.cpp  renderer.cpp
src/sampler/: halton_sampler.cpp  sampling.cpp  sobol_sampler.cpp
src/sampling/: halton_sampler.cpp  independent_sampler.cpp  sampling.cpp  stratified_sampler.cpp
src/scene/: scene.cpp  scene_editor.cpp  scene_host.cpp  scene_loader.cpp
src/ui/: ai_panel.cpp  image_gallery.cpp  main_menu_bar.cpp  ui_denoise.cpp  ui_panel.cpp  ui_settings.cpp
src/utils/: assets_loader.cpp  effect_pipeline.cpp  effect_runner.cpp  frame_stats.cpp  helper.cpp  input_controller.cpp  logger.cpp  paths.cpp  python_env.cpp
